# orion

./: .cproject  .project  BUILD-Windows.txt  BUILD.txt  CMakeLists.txt  GKLib.tgz  LICENSE.txt  Makefile  README.txt
data/: seq1.csr  seq1.csr.counts  seq1.labels
manual/trunk/: .project  .texlipse
manual/trunk/src/: manual.dvi  manual.tex  orion.bib
manual/trunk/tmp/: manual.aux  manual.bbl  manual.blg  manual.out  manual.toc
scripts/: sankey.py  transitions.py
src/: CMakeLists.txt  cmdline.c  defs.h  diff.c  io.c  main.c  orion.c  orion.h  otm.c  proto.h  protos.c  struct.h  util.c
utils/: mkdist.sh
